Change Log:

**3/11/15**

* Added Preparation/Punishment (for hatred)
* Added Hatred generation rows to damage log for punishment, regen and health globes
* Added Hatred from Companion/Bat
* Added Companion DPS
* Fixed import of primary skill damage bonuses from items

**3/10/15**

* Fixed import for Elite damage
* Fixed (finally!) import of Crit Chance/Crit Hit Damage
* Now handles case of only 1 generator/spender
* Added Reaper's Wraps and Health Globes (for hatred)
* Added Blood Vengeance hatred from health globes bonus
* Added Cindercoat RCR for Fire Skills
* Fixed hatred calculation so that RCR does not affect hatred generators
* Added Templar/Inspire buff
* Added configurable delay between player actions (default is 50 milliseconds)
* Added support of Odyssey's End bow
* Fixed bug with importing % weapon damage 
* Corrected default Max Hatred to 125 

**3/9/15**

* Fixed bug that caused some profiles to fail to import
* Fixed bug that was omitting damage from Spitfire Turret's Rockets in the damage log
* Added Kridershot and Spines of Seething Hatred
* Fixed bug with Excel export
* Fixed bug with M6 to account for all sentries (was currently calculating # of sentries minus 1)
* Fixed import of skill damage bonuses
* Added skill damage bonuses for primary skills
* Added import of Hatred Per Second from items
* Added paragon points for Max Hatred and Resource Cost Reduction
* Added Resource Cost Reduction import from items
* Damage Log now displays Hatred spent/gained from skills
* Added Blood Vengeance (only +max hatred effect for now) and Night Stalker passives 
* Fixed error with crit chance/damage calculation (added paragon points twice)

**3/8/15**

* Updated to Patch 2.1.2. Changed mechanics for calculating Sentry Damage
* Added fields for Max Hatred and Hatred Regen
* Added support for Hatred Generators

**11/18/14**

* Added statistics

**11/13/14**

* Reduced # of calls to battle.net API to 8 per second (still receiving occasional HTTP 403 at 9/sec).