@@ -7,6 +7,7 @@ Change Log:
 * Added Hatred from Companion/Bat
 * Added Companion DPS
 * Fixed import of primary skill damage bonuses from items
+* Added Dex, Crit and Gogok of Swiftness bonuses to Companion damage
 
 **3/10/15**
 
